refactor: 테스트 통과를 위한 자바 21 버전 메서드를 하위 버전에 맞춰 코드 변경